--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -7,3 +7,35 @@
     --black: #000000;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+
+h1 {
+    font-size: 2.25rem;
+}
+h2 {
+    font-size: 2rem;
+}
+h3 {
+    font-size: 1.75rem;
+}
+h4 {
+    font-size: 1.5rem;
+}
+h5 {
+    font-size: 1.25rem;
+}
+h6 {
+    font-size: 1rem;
+}
+
+img {
+    margin: 10px;
+}
+
+.control {
+    background-color: var(--light-pink);
+    height: 150px;
+}
