--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -7,35 +7,30 @@
     --black: #000000;
 }
 
-body {
+html {
+    scroll-behavior: smooth;
+}
+
+body{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
 }
 
-h1 {
-    font-size: 2.25rem;
-}
-h2 {
-    font-size: 2rem;
-}
-h3 {
-    font-size: 1.75rem;
-}
-h4 {
-    font-size: 1.5rem;
-}
-h5 {
-    font-size: 1.25rem;
-}
-h6 {
-    font-size: 1rem;
+.button:hover {
+    text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+    -webkit-box-shadow: 0px 5px 40px -10px var(--dark-blue);
+    -moz-box-shadow: 0px 5px 40px -10px var(--dark-blue);
+    transition: all 0.4s ease 0s;
 }
 
-img {
-    margin: 10px;
-}
+hr.rounded {
+    border-top: 2px solid  var(--light-pink);
+    border-radius: 2px;
+  }
 
-.control {
+.button{
     background-color: var(--light-pink);
-    height: 150px;
+}
+
+#footer{
+    padding: 0.5rem;
 }
